--- a/sneeds_speedfeed/templates/base_generic.html
+++ b/sneeds_speedfeed/templates/base_generic.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <header
-      class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom"
+      class="d-flex flex-wrap justify-content-center py-3 mb-4 px-1 border-bottom"
     >
       <a
         href="/"
@@ -36,6 +36,6 @@
         </li>
       </ul>
     </header>
-    {% block content %}{% endblock content %}
+    <div class="px-2">{% block content %}{% endblock content %}</div>
   </body>
 </html>
