--- a/speedfeed_app/templates/speedfeed_app/restaurant_form.html
+++ b/speedfeed_app/templates/speedfeed_app/restaurant_form.html
@@ -9,6 +9,6 @@
   <table>
     {{ form.as_table }}
   </table>
-  <input type="submit" value="Submit" />
+  <input type="submit" class='btn-primary btn' value="Submit" />
 </form>
 {% endblock content %}
